# Projet-ILIAR

./: .gitignore  README.md
ILIAR/: .gitignore  job.sbatch  pyproject.toml  setup.py  submit_slurm.py  test.py
ILIAR/configs/: tmpgbtbszki-config.yml
ILIAR/torchtmpl/: data2.py  dataaugmentation.py  griding.py  minimal_train.py  name_generator.py  nvidiadata.py  optim.py  test.py  utils.py
ILIAR/torchtmpl/models/: __init__.py  cbam.py  res9boost.py  resnet_18.py
ILIAR/torchtmpl/torchtmpl/: main.py  minimal_train.py  submit_slurm.py  utils2.py
ILIAR/torchtmpl/torchtmpl/models/: __main__.py  resnet_18.py
iliar_solution/: CMakeLists.txt  package.xml  setup.cfg  setup.py
iliar_solution/launch/: autopilot.launch.xml  autopilot_teleop.launch.xml  iliar_record.launch.xml  rviz_gui.launch.xml  simu_gui.launch.xml  teleop.launch.xml
iliar_solution/src/iliar_solution/: autopilot.py  autopilot2.py  autopilot_dummy.py  command_mux.py  dist_to_path.py  path_dilater.py  path_publisher.py  scorer.py  traveled_distance.py
iliar_solution2/: package.xml  setup.cfg  setup.py
iliar_solution2/config/: gui.rviz
iliar_solution2/launch/: autopilot.launch.xml  autopilot_teleop.launch.xml  experiment.launch.xml  experiment_launch.py  iliar_record.launch.xml  rviz_gui.launch.xml  simu_gui.launch.xml  teleop.launch.xml
iliar_solution2/src/iliar_solution2/: autopilot.py  base_dataset.py  dist_to_path.py  path_dilater.py  path_publisher.py  record_dataset.py  scorer.py  (+2 more)
pytorch_template_code-main/pytorch_template_code-main/: job.sbatch  record.py  submit_slurm.py
(+5 files in other folders)
